spacing fixes in title and divider line

--- a/css/styles.css
+++ b/css/styles.css
@@ -244,6 +244,10 @@ img {
     margin-right: 10px;
 }
 
+.section-title-three {
+    margin-right: 10px;
+}
+
 .divider {
     width: 70%;
     height: 2px;
